Fixed Bugs and changed alignment of text and pics

--- a/assets/main.css
+++ b/assets/main.css
@@ -24,6 +24,14 @@
   top: 0px;
   z-index: 1;
   }
+  .main-text {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+  }
+  
 
   .brand-title {
     font-size: 3rem;
